--- a/somministrazioni-vaccini_analisi.ipynb
+++ b/somministrazioni-vaccini_analisi.ipynb
@@ -2897,18 +2897,9 @@
    "source": [
     "col_to_plot=['prima_dose','seconda_dose']\n",
     "for col in col_to_plot:\n",
-    "    fig = px.histogram(\n",
-    "                    dosi_tot,\n",
-    "                    x='nome_area',\n",
-    "                    y=col,\n",
-    "                    color='nome_area',\n",
-    "                    barmode='overlay',\n",
-    "                    title=f\"#{col} per Regione\"\n",
-    "                       )\n",
-    "    fig.update_layout(yaxis_title=f\"#{col}\",\n",
-    "                    xaxis_title=None,\n",
-    "                    width=800,\n",
-    "                    height=600)\n",
+    "    fig = px.histogram(dosi_tot, x='nome_area', y=col, color='nome_area', barmode='overlay',\n",
+    "                       title=f\"#{col} per Regione\")\n",
+    "    fig.update_layout(yaxis_title=f\"#{col}\", xaxis_title=None, width=800, height=600)\n",
     "    fig.show()"
    ],
    "metadata": {
@@ -2921,7 +2912,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## b) Distrubuzione numero di dosi in Itali<br>Dicembre 2020 a Febbraio 2021"
+    "## b) Distrubuzione numero di dosi in Italia<br>Dicembre 2020 a Febbraio 2021"
    ],
    "metadata": {
     "collapsed": false,
